package com.kspt.khandygo.core;

public interface Entity {

  int id();
}
