package com.kspt.khandygo.core.entities;

import com.kspt.khandygo.core.Entity;

public interface Employee extends Entity {

  String name();

  Employee manager();

  Employee paymaster();
}
